# hotel_receptionist_agent_llm

./: .gitignore  Readme.md  pyproject.toml
data/embeddings/chroma_db/: Readme.md  chroma.sqlite3
data/raw_data/: company_faqs.txt
src/: main.py
src/load_internal_db/: db_load.py
src/primary_agent/: primary_agent.py
src/tools/: get_current_weather.py  search_company_data.py  search_llm_for_animal_color.py
tests/test_db/: test_utils.py
utils/: db_utils.py
