[project]
name = "hotel-receptionist-agent"
version = "0.1.0"
description = "Agent for managing hotel reception tasks"
authors = [
    {name = "SH"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb (>=1.0.17,<2.0.0)",
    "langchain-core (>=0.3.74,<0.4.0)",
    "langchain-community (>=0.3.27,<0.4.0)",
    "langchain-chroma (>=0.2.5,<0.3.0)",
    "tiktoken (>=0.11.0,<0.12.0)",
    "requests (>=2.32.4,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "sentence-transformers (>=5.1.0,<6.0.0)",
    "protobuf (>=6.32.0,<7.0.0)",
    "pytest (>=8.4.1,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dependencies]
langchain = "^0.0.1"  # Replace with the desired version